5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1593_1801.log
== TEST (2019-03-26 10:41:20) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print((Abra+abrir)*4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((Abra+abrir)*4)
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:41:38) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print(("Abra+abrir")*4)


-- OUTPUT:
Abra+abrirAbra+abrirAbra+abrirAbra+abrir
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:42:03) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print(("Abra"+abrir)*4)


-- OUTPUT:
AbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:42:23) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print(("Abra "+abrir)*4)


-- OUTPUT:
Abra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:42:38) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print(("Abra "+abrir )*4)


-- OUTPUT:
Abra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:42:44) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print(("Abra "+abrir )*4)


-- EXECUTION TIME:
0.196185
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livroAbra livroAbra livroAbra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carroAbra carroAbra carroAbra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixaAbra caixaAbra caixaAbra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:43:42) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print(("Abra"+abrir)*4)


-- OUTPUT:
AbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:43:51) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print(("Abra"+abrir)*4)


-- EXECUTION TIME:
0.156543
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
AbralivroAbralivroAbralivroAbralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
AbracarroAbracarroAbracarroAbracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
AbracaixaAbracaixaAbracaixaAbracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:44:10) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print(("Abra"+abrir)*nR)


-- EXECUTION TIME:
0.146561
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 4, in <module>
    print(("Abra"+abrir)*nR)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:44:12) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print(("Abra"+abrir)*nR)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(("Abra"+abrir)*nR)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:45:10) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print(("Abra"+ abrir)


-- ERROR:
File "XXXX", line 6
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:45:14) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print("Abra"+ abrir)


-- OUTPUT:
Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:45:27) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))

print("Abra "+ abrir)


-- OUTPUT:
Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:46:27) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=float(input("quantas vezes voce quer abrir? "))
frase=("Abra"+abrir)*nR
print(frase)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frase=("Abra"+abrir)*nR
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:47:11) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=int(input("quantas vezes voce quer abrir? "))
frase=("Abra"+abrir)*nR
print(frase)


-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:47:19) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=int(input("quantas vezes voce quer abrir? "))
frase=("Abra"+abrir)*nR
print(frase)


-- EXECUTION TIME:
0.199941
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
AbracarroAbracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:47:34) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=int(input("quantas vezes voce quer abrir? "))
frase=("Abra "+abrir)*nR
print(frase)


-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:47:41) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=int(input("quantas vezes voce quer abrir? "))
frase=("Abra "+abrir)*nR
print(frase)


-- EXECUTION TIME:
0.286217
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carroAbra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:48:02) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=int(input("quantas vezes voce quer abrir? "))
frase=("Abra "+_abrir)*nR
print(frase)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frase=("Abra "+_abrir)*nR
NameError: name '_abrir' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:48:16) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=int(input("quantas vezes voce quer abrir? "))
frase=("Abra "+abrir)*nR
print(frase)


-- EXECUTION TIME:
0.217642
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carroAbra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:48:50) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=int(input("quantas vezes voce quer abrir? "))
frase=("Abra "+ abrir)*nR
print(frase)


-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:49:12) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=int(input("quantas vezes voce quer abrir? "))
frase=(" Abra "+ abrir)*nR
print(frase)


-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:49:21) 
-- CODE:
abrir=input("o que voce quer abrir? ")
nR=int(input("quantas vezes voce quer abrir? "))
frase=(" Abra "+ abrir)*nR
print(frase)


-- EXECUTION TIME:
0.190017
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
